--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,13 +8,29 @@ body {
 }
 
 .container {
+  position: relative;
   width: 100%;
   height: 100vh;
   max-width: 800px;
   margin: 0 auto;
   padding: 0 1rem;
   @extend .d-flex-center;
-  h1 {
-    font-size: 3rem;
+  .card {
+    position: relative;
+    background: #dcdcdc;
+    border-radius: 10px;
+    padding: 2rem;
+    box-shadow: 0px 3px 10px 5px rgba(0, 0, 0, 0.1);
+    h1 {
+      font-size: 3rem;
+    }
+    img {
+      position: absolute;
+      top: 30%;
+      right: 30%;
+      width: 50px;
+      height: auto;
+      border-radius: 50%;
+    }
   }
 }
