--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,7 @@
 
 body {
   background: #dcdcdc;
+  background: linear-gradient(#475b68, #33424b);
 }
 
 .container {
@@ -16,21 +17,64 @@ body {
   padding: 0 1rem;
   @extend .d-flex-center;
   .card {
+    width: 100%;
+    max-width: 450px;
+    height: 450px;
     position: relative;
-    background: #dcdcdc;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    background: rgba(#29353c, 0.6);
+    color: #ffffff;
     border-radius: 10px;
-    padding: 2rem;
-    box-shadow: 0px 3px 10px 5px rgba(0, 0, 0, 0.1);
+    padding: 3rem 1rem;
+    // box-shadow: 0px 3px 20px 5px rgba(0, 0, 0, 0.1);
     h1 {
-      font-size: 3rem;
+      font-size: 2.5rem;
     }
-    img {
-      position: absolute;
-      top: 30%;
-      right: 30%;
-      width: 50px;
+    p {
+      color: $secondary-color;
+    }
+    img.profile {
+      width: 100px;
       height: auto;
+      margin: 0 auto 20px auto;
       border-radius: 50%;
+      border: 3px solid white;
+    }
+    button {
+      border: 3px solid $secondary-color;
+      border-radius: 20px;
+      color: $secondary-color;
+      background: transparent;
+      padding: 0.5rem;
+      font-size: 1.2rem;
+      width: 200px;
+      margin: 0 auto;
+      transition: all 0.5s;
+      &:hover {
+        background: $secondary-color;
+        color: $primary-color;
+      }
+    }
+    .icons {
+      width: 150px;
+      height: 30px;
+      margin: 0 auto 20px auto;
+      display: flex;
+      justify-content: space-around;
+      .icon {
+        width: 30px;
+        height: auto;
+        @extend .cursor-pointer;
+        color: red;
+        &.github-icon {
+          background-image: url("../assets/icons/github.svg");
+        }
+        &.linkedin-icon {
+          background-image: url("../assets/icons/linkedin.svg");
+        }
+      }
     }
   }
 }
