--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -24,16 +24,18 @@ body {
     display: flex;
     flex-direction: column;
     text-align: center;
-    background: rgba(#29353c, 0.6);
+    // background: rgba(#29353c, 0.6);
     color: #ffffff;
     border-radius: 10px;
     padding: 3rem 1rem;
     // box-shadow: 0px 3px 20px 5px rgba(0, 0, 0, 0.1);
     h1 {
       font-size: 2.5rem;
+      margin-bottom: $margin;
     }
     p {
-      color: $secondary-color;
+      color: $primary-color;
+      margin-bottom: $margin;
     }
     img.profile {
       width: 100px;
@@ -42,38 +44,32 @@ body {
       border-radius: 50%;
       border: 3px solid white;
     }
+    .icons {
+      width: 30%;
+      height: 30px;
+      margin: $margin auto;
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+      svg {
+        @extend .cursor-pointer;
+        height: 100%;
+        fill: #ffffff;
+      }
+    }
     button {
-      border: 3px solid $secondary-color;
-      border-radius: 20px;
-      color: $secondary-color;
+      border: 3px solid $primary-color;
+      border-radius: 30px;
+      color: $primary-color;
       background: transparent;
-      padding: 0.5rem;
+      padding: 1rem;
       font-size: 1.2rem;
       width: 200px;
       margin: 0 auto;
       transition: all 0.5s;
       &:hover {
-        background: $secondary-color;
-        color: $primary-color;
-      }
-    }
-    .icons {
-      width: 150px;
-      height: 30px;
-      margin: 0 auto 20px auto;
-      display: flex;
-      justify-content: space-around;
-      .icon {
-        width: 30px;
-        height: auto;
-        @extend .cursor-pointer;
-        color: red;
-        &.github-icon {
-          background-image: url("../assets/icons/github.svg");
-        }
-        &.linkedin-icon {
-          background-image: url("../assets/icons/linkedin.svg");
-        }
+        background: $primary-color;
+        color: #33424b;
       }
     }
   }
