themify icons, card body to center everything

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,8 @@
 @import "./utils";
 @import "./reset";
 
+@import "@icon/themify-icons/themify-icons.css";
+
 body {
   background: #dcdcdc;
   background: linear-gradient(#475b68, #33424b);
@@ -14,62 +16,61 @@ body {
   height: 100vh;
   max-width: 800px;
   margin: 0 auto;
-  padding: 0 1rem;
+  padding: 0 0.8rem;
   @extend .d-flex-center;
   .card {
     width: 100%;
     max-width: 450px;
-    height: 450px;
-    position: relative;
-    display: flex;
-    flex-direction: column;
     text-align: center;
-    // background: rgba(#29353c, 0.6);
+    background: rgba(#29353c, 0.6);
     color: #ffffff;
     border-radius: 10px;
     padding: 3rem 1rem;
-    // box-shadow: 0px 3px 20px 5px rgba(0, 0, 0, 0.1);
-    h1 {
-      font-size: 2.5rem;
-      margin-bottom: $margin;
-    }
-    p {
-      color: $primary-color;
-      margin-bottom: $margin;
-    }
-    img.profile {
-      width: 100px;
-      height: auto;
-      margin: 0 auto 20px auto;
-      border-radius: 50%;
-      border: 3px solid white;
-    }
-    .icons {
-      width: 30%;
-      height: 30px;
-      margin: $margin auto;
-      display: flex;
-      align-items: center;
-      justify-content: space-around;
-      svg {
-        @extend .cursor-pointer;
-        height: 100%;
-        fill: #ffffff;
+    box-shadow: 0px 3px 20px 5px rgba(0, 0, 0, 0.1);
+    .card-body {
+      height: 100%;
+      h1 {
+        font-size: 2.5rem;
+        margin-bottom: $margin;
       }
-    }
-    button {
-      border: 3px solid $primary-color;
-      border-radius: 30px;
-      color: $primary-color;
-      background: transparent;
-      padding: 1rem;
-      font-size: 1.2rem;
-      width: 200px;
-      margin: 0 auto;
-      transition: all 0.5s;
-      &:hover {
-        background: $primary-color;
-        color: #33424b;
+      p {
+        color: $primary-color;
+        margin-bottom: $margin;
+      }
+      img.profile {
+        width: 100px;
+        height: auto;
+        margin: 0 auto 20px auto;
+        border-radius: 50%;
+        border: 3px solid white;
+      }
+      .icons {
+        width: 30%;
+        height: 30px;
+        margin: $margin auto;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        .ti {
+          @extend .cursor-pointer;
+          font-size: 1.5rem;
+          color: $primary-color;
+        }
+      }
+      button {
+        border: 3px solid $primary-color;
+        border-radius: 30px;
+        color: $primary-color;
+        background: transparent;
+        padding: 1rem;
+        font-size: 1.2rem;
+        width: 200px;
+        margin: 0 auto;
+        transition: all 0.5s;
+        &:hover {
+          background: $primary-color;
+          color: #33424b;
+        }
       }
     }
   }
