--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -27,6 +27,10 @@ body {
     border-radius: 10px;
     padding: 3rem 1rem;
     box-shadow: 0px 3px 20px 5px rgba(0, 0, 0, 0.1);
+    transition: transform 0.5s;
+    &:hover {
+      transform: rotateX(-10deg);
+    }
     .card-body {
       height: 100%;
       h1 {
@@ -66,7 +70,7 @@ body {
         font-size: 1.2rem;
         width: 200px;
         margin: 0 auto;
-        transition: all 0.5s;
+        transition: background-color ease-in-out 0.5s;
         &:hover {
           background: $primary-color;
           color: #33424b;
