--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,7 +7,7 @@
 
 body {
   background: #dcdcdc;
-  background: linear-gradient(#475b68, #33424b);
+  background: linear-gradient(75deg, #475b68, #33424b);
 }
 
 .container {
@@ -29,7 +29,7 @@ body {
     box-shadow: 0px 3px 20px 5px rgba(0, 0, 0, 0.1);
     transition: transform 0.5s;
     &:hover {
-      transform: rotateX(-10deg);
+      // transform: rotateX(-10deg);
     }
     .card-body {
       height: 100%;
@@ -73,7 +73,12 @@ body {
         transition: background-color ease-in-out 0.5s;
         &:hover {
           background: $primary-color;
-          color: #33424b;
+          a {
+            color: #33424b;
+          }
+        }
+        a {
+          color: white;
         }
       }
     }
