--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto&display=swap");
+// @import url("https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 @import "./variables";
 
 h1,
@@ -17,9 +18,9 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Roboto", sans-serif;
+  font-family: "Lato", serif;
 }
 
 p {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Lato", sans-serif;
 }
